--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -437,7 +437,7 @@ a:hover{
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
-        background-image: url(/assets/images/portrait.png);
+        background-image: url(/assets/images/mobile-portrait.png);
         
     }
 
