--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -425,15 +425,11 @@ a:hover{
         height: 150px;
         max-height: 170px;
         margin: 0 auto;
-        border: solid 3px transparent;
-        border-radius: 50%;
-        background-image: var(--primary-gradient-color), radial-gradient(circle at top left, var(--primary-color),var(--secondary-color));
-        background-origin: border-box;
-        background-clip: content-box, border-box;
     }
 
     .hero-portrait .pic {
         width: 100%;
+        height:100%;
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
