--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -427,9 +427,10 @@ a:hover{
     }
 
     .hero-portrait .pic {
+        aspect-ratio: 1 / 1;
         width: 100%;
         height:100%;
-        background-size: cover;
+        background-size: contain;
         background-position: center;
         background-repeat: no-repeat;
         background-image: url(/assets/images/mobile-portrait.png);
